# mssql-pg-migrate-rs

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE-REVIEW-CLEANUP.md  CODEX-FINDINGS.md  Cargo.toml  GEMINI-CODE-REVIEW.md  MIGRATION_TEST_RESULTS.md  PERFORMANCE.md  PLAN-pg-copy-optimization.md  README.md  SECURITY-REVIEW-DATE-INCREMENTAL-SYNC.md  TEST-PLAN-SECURITY-FIXES.md  TUI-PLAN.md  benchmark-config.yaml  benchmark-pg-to-mssql-go-settings.yaml  benchmark-pg-to-mssql-upsert.yaml  benchmark-pg-to-mssql.yaml  benchmark-rust-only.sh  benchmark-upsert-clean.yaml  benchmark-upsert-config.yaml  benchmark-upsert-pg-to-mssql.yaml  benchmark-upsert-watermark.yaml  benchmark-watermark-posts-test.yaml  benchmark-watermark-test.yaml  benchmark.sh  config-new.yaml  config.example.json  config.example.yaml  run-all-tests.sh  test-config.example.yaml  test-config.yaml  test-mssql-to-mssql-drop.yaml  test-mssql-to-mssql-upsert.yaml  test-mssql-to-mysql-drop.yaml  test-mssql-to-mysql-upsert.yaml  test-mssql-to-postgres-drop.yaml  test-mssql-to-postgres-upsert.yaml  (+14 more)
.github/workflows/: release.yml
crates/mssql-pg-migrate/: Cargo.toml
crates/mssql-pg-migrate-cli/: Cargo.toml
crates/mssql-pg-migrate-cli/src/: main.rs  wizard.rs
crates/mssql-pg-migrate-cli/src/tui/: actions.rs  app.rs  events.rs  logging.rs  mod.rs  ui.rs  wizard.rs
crates/mssql-pg-migrate-cli/src/tui/widgets/: mod.rs
crates/mssql-pg-migrate-cli/tests/: cli_tests.rs
crates/mssql-pg-migrate/src/: error.rs  lib.rs
crates/mssql-pg-migrate/src/config/: mod.rs  types.rs  validation.rs
crates/mssql-pg-migrate/src/core/: catalog.rs  identifier.rs  mod.rs  schema.rs  traits.rs  value.rs
crates/mssql-pg-migrate/src/dialect/: canonical.rs  mod.rs  typemap.rs
crates/mssql-pg-migrate/src/drivers/: mod.rs
crates/mssql-pg-migrate/src/drivers/common/: direct_copy.rs  mod.rs  pg_binary.rs  tls.rs
crates/mssql-pg-migrate/src/drivers/mssql/: dialect.rs  mod.rs  reader.rs  writer.rs
crates/mssql-pg-migrate/src/drivers/mysql/: dialect.rs  mod.rs  reader.rs  writer.rs
crates/mssql-pg-migrate/src/drivers/postgres/: dialect.rs  mod.rs  reader.rs  writer.rs
crates/mssql-pg-migrate/src/orchestrator/: mod.rs  pools.rs
crates/mssql-pg-migrate/src/pipeline/: job.rs  mod.rs  template.rs
crates/mssql-pg-migrate/src/source/: bench_copy.rs  direct_copy.rs  mod.rs  odbc.rs  odbc_pg.rs  pg_binary.rs  postgres.rs  types.rs
crates/mssql-pg-migrate/src/state/: backend.rs  db.rs  mod.rs  mssql_db.rs  mysql_db.rs  noop.rs  schema.sql
crates/mssql-pg-migrate/src/transfer/: mod.rs
crates/mssql-pg-migrate/src/typemap/: mod.rs
crates/mssql-pg-migrate/src/verify/: hash_query.rs  mod.rs  normalize.rs  normalize_pg.rs  types.rs  universal.rs
docs/: DATA_ENGINEER_GUIDE.md  mysql-performance-tuning.md  upsert-update-detection-bug.md
examples/: config-kerberos.yaml  config.yaml
release/.github/workflows/: release.yml
scripts/: test-airflow.sh  test-dry-run.sh  test-health-check.sh  test-signals.sh
