[workspace]
resolver = "2"
members = ["crates/mssql-pg-migrate", "crates/mssql-pg-migrate-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/johndauphine/mssql-pg-migrate-rs"
authors = ["John Dauphine <jdauphine@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# MSSQL driver (pure Rust with rustls)
tiberius = { version = "0.12", default-features = false, features = ["chrono", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }

# PostgreSQL driver
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14" }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# UUID handling
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-channel = "2.3"

# Concurrency
parking_lot = "0.12"

# Decimal handling
rust_decimal = { version = "1.36", features = ["db-tokio-postgres"] }

# Bytes handling
bytes = "1.7"

# Hashing for config validation
sha2 = "0.10"

# Hex encoding
hex = "0.4"

# Connection pooling
bb8 = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Signal handling
ctrlc = "3.4"

# System info detection
sysinfo = "0.32"
