[workspace]
resolver = "2"
members = ["crates/mssql-pg-migrate", "crates/mssql-pg-migrate-cli"]

[workspace.package]
version = "1.42.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/johndauphine/mssql-pg-migrate-rs"
authors = ["John Dauphine <jdauphine@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# MSSQL driver (pure Rust with rustls)
# Note: The "tds73" feature enables TDS 7.3 protocol, which requires SQL Server 2008 or later
# (including Azure SQL). Earlier SQL Server versions are not supported with this configuration.
# The "integrated-auth-gssapi" feature enables Kerberos authentication on Unix/macOS.
# When kerberos-mssql feature is enabled, GSSAPI is added for native Kerberos auth.
tiberius = { version = "0.12", default-features = false, features = ["chrono", "rustls", "rust_decimal", "tds73"] }
tokio-util = { version = "0.7", features = ["compat"] }

# PostgreSQL driver
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14" }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1"] }
tokio-postgres-rustls = "0.12"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"

# MySQL/MariaDB driver (optional, feature-gated)
# Uses mysql_async for LOAD DATA LOCAL INFILE support (5-10x faster than INSERT)
mysql_async = { version = "0.34", default-features = false, features = ["minimal", "chrono", "rustls-tls"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# UUID handling
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-channel = "2.3"


# Decimal handling
rust_decimal = { version = "1.36", features = ["db-tokio-postgres"] }

# Bytes handling
bytes = "1.7"

# Hashing for config validation
sha2 = "0.10"
hmac = "0.12"

# Hex encoding
hex = "0.4"

# Connection pooling
bb8 = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# System info detection
sysinfo = "0.32"

# Use fork with packet_size support (requests 32KB, negotiates to 16KB on Linux = 42% faster)
# PR: https://github.com/prisma/tiberius/pull/400
[patch.crates-io]
tiberius = { git = "https://github.com/johndauphine/tiberius.git", branch = "feature/packet-size-config" }
