[package]
name = "mssql-pg-migrate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance MSSQL to PostgreSQL migration CLI"

[[bin]]
name = "mssql-pg-migrate"
path = "src/main.rs"

[dependencies]
mssql-pg-migrate = { path = "../mssql-pg-migrate" }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# JSON output
serde_json = { workspace = true }

# Signal handling
ctrlc = { workspace = true }
