[package]
name = "mssql-pg-migrate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance MSSQL to PostgreSQL migration CLI"

[[bin]]
name = "mssql-pg-migrate"
path = "src/main.rs"

[features]
default = []
tui = ["ratatui", "crossterm", "fuzzy-matcher"]
kerberos = ["mssql-pg-migrate/kerberos"]
mysql = ["mssql-pg-migrate/mysql"]

[dependencies]
mssql-pg-migrate = { path = "../mssql-pg-migrate" }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# JSON output
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Interactive prompts
dialoguer = "0.11"

# Date/time (for TUI log formatting)
chrono = { workspace = true }

# TUI (optional, enabled with --features tui)
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"
