[package]
name = "mssql-pg-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance MSSQL to PostgreSQL migration library"
keywords = ["mssql", "postgresql", "migration", "database", "etl"]
categories = ["database", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# MSSQL driver
tiberius = { workspace = true }
tokio-util = { workspace = true }

# PostgreSQL driver
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

# Configuration
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

# UUID handling
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
rayon = "1.10"

# Decimal handling
rust_decimal = { workspace = true }

# Bytes handling
bytes = { workspace = true }

# Hashing for config validation and row change detection
sha2 = { workspace = true }
md-5 = "0.10"

# Hex encoding
hex = { workspace = true }

# Connection pooling
bb8 = { workspace = true }

# System info detection
sysinfo = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tracing-subscriber = { workspace = true }
