[package]
name = "mssql-pg-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance MSSQL to PostgreSQL migration library"
keywords = ["mssql", "postgresql", "migration", "database", "etl"]
categories = ["database", "command-line-utilities"]

[features]
default = []
# MSSQL Kerberos authentication via native Tiberius GSSAPI (~180K rows/sec)
# Requires libgssapi-krb5-2 on Linux, GSS.framework on macOS, SSPI on Windows
# Note: PostgreSQL Kerberos is not supported (tokio-postgres lacks GSSAPI)
kerberos = ["tiberius/integrated-auth-gssapi"]
# MySQL/MariaDB support via mysql_async (with LOAD DATA LOCAL INFILE)
mysql = ["dep:mysql_async"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# MSSQL driver
tiberius = { workspace = true }
tokio-util = { workspace = true }

# PostgreSQL driver
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

# Configuration
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

# UUID handling
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }

# Decimal handling
rust_decimal = { workspace = true }

# Bytes handling
bytes = { workspace = true }

# Hashing for config validation
sha2 = { workspace = true }
hmac = { workspace = true }

# Hex encoding
hex = { workspace = true }

# Connection pooling
bb8 = { workspace = true }

# Socket configuration for TCP keepalives
socket2 = { version = "0.5", features = ["all"] }

# System info detection
sysinfo = { workspace = true }

# Glob pattern matching for table filters
glob = "0.3"

# LZ4 compression for text columns in transit
lz4_flex = "0.11"

# MySQL/MariaDB driver (optional) - uses mysql_async for LOAD DATA LOCAL INFILE
mysql_async = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tracing-subscriber = { workspace = true }
